# ProjectGolem

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  EIP-blueprint-patch.md  PROGRESS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
ai-services/claim-engine/: Makefile  README.md  pyproject.toml
ai-services/claim-engine/scripts/: smoke.py
ai-services/claim-engine/src/eip_claim/: __init__.py  api.py  extractor.py  llm.py
ai-services/claim-engine/src/eip_claim/_generated/: __init__.py
ai-services/claim-engine/tests/: test_api.py  test_contracts.py  test_extractor.py  test_live.py
ai-services/e2e/: Makefile  README.md  calibration.py  pyproject.toml
ai-services/e2e/tests/: test_calibration.py  test_pipeline.py
ai-services/evidence-engine/: Makefile  README.md  pyproject.toml
ai-services/evidence-engine/scripts/: seed_graph.py  smoke.py
ai-services/evidence-engine/src/eip_evidence/: __init__.py  api.py  composite.py  embedding.py  engine.py  graph_retriever.py  graph_schema.py  graphstore.py  independence.py  llm.py  models.py  retriever.py  semantic_retriever.py  vectorstore.py
ai-services/evidence-engine/src/eip_evidence/_generated/: __init__.py  evidence.py
ai-services/evidence-engine/tests/: test_api.py  test_composite.py  test_contracts.py  test_embedding.py  test_engine.py  test_graph_retriever.py  test_graph_schema.py  test_independence.py  test_live.py  test_semantic_retriever.py
ai-services/libs/eip-llm/: Makefile  README.md  pyproject.toml
ai-services/libs/eip-llm/src/eip_llm/: __init__.py
ai-services/libs/eip-llm/tests/: test_llm.py
ai-services/libs/eip-persistence/: Makefile  README.md  pyproject.toml
ai-services/libs/eip-persistence/src/eip_persistence/: __init__.py  audit_store.py  calibration_store.py  config_store.py  models.py  review_store.py  sql_store.py  store.py
ai-services/libs/eip-persistence/tests/: test_audit_store.py  test_calibration_store.py  test_config_store.py  test_review_store.py  test_sql_store.py  test_store.py
ai-services/trust-engine/: Makefile  README.md  pyproject.toml
ai-services/trust-engine/benchmark/seed/: cases.json
ai-services/trust-engine/scripts/: run_benchmark.py  smoke.py
ai-services/trust-engine/src/eip_trust/: __init__.py  api.py  config.py  config_service.py  engine.py  freshness.py  metrics.py  models.py  proposals.py  weights.py
ai-services/trust-engine/src/eip_trust/_generated/: __init__.py  claim.py  verdict.py
ai-services/trust-engine/src/eip_trust/benchmark/: __init__.py  models.py  runner.py
ai-services/trust-engine/tests/: test_api.py  test_benchmark.py  test_calibration_api.py  test_config_api.py  test_contracts.py  test_engine.py  test_freshness.py  test_independence_override.py  test_metrics_api.py  test_persistence_api.py  test_proposals_api.py  test_review_api.py  test_weights_profiles.py
contracts/: README.md  claim.schema.json  evidence.schema.json  verdict.schema.json
docs/: admin-portal-plan.md
docs/adr/: 0001-record-architecture-decisions.md  0002-polyglot-python-ai-typescript-web.md  0003-deterministic-trust-engine.md  0004-contract-codegen-toolchain.md  0005-llm-recorded-wrapper.md  0006-retrieval-seams.md  0007-independence-citation-laundering.md  0008-bitemporal-verdict-store.md  0009-openrouter-multi-model.md  0010-canonical-record-ownership.md  0011-embeddings-and-chunking.md  0012-multilingual-pipeline.md  0013-auth-provider-oidc.md  README.md  template.md
infra/: README.md  docker-compose.yml
scripts/: dev.sh  qa.sh
scripts/git-hooks/: pre-commit
web/: README.md
web/admin/: next.config.mjs  package.json  tsconfig.json
web/admin/app/: layout.tsx  page.tsx
web/admin/components/: AccessManagement.test.tsx  AccessManagement.tsx  AssessClaim.test.tsx  AssessClaim.tsx  ClaimsBrowser.test.tsx  ClaimsBrowser.tsx  ConfigEditor.test.tsx  ConfigEditor.tsx  Dashboard.test.tsx  Dashboard.tsx  Login.test.tsx  Login.tsx  ReviewQueue.test.tsx  ReviewQueue.tsx
web/admin/lib/: adminApi.test.ts  adminApi.ts  configApi.test.ts
web/api-gateway/: package.json  tsconfig.json
web/api-gateway/src/: adminClient.ts  app.ts  auth.ts  claimClient.ts  evidenceClient.ts  rateLimit.ts  scorerClient.ts  server.ts
web/api-gateway/test/: admin.test.ts  assess.test.ts  auth.test.ts  extract.test.ts  gather.test.ts  health.test.ts  keys.test.ts  rateLimit.test.ts  score.test.ts
web/portal/: next-env.d.ts  package.json  tsconfig.json
web/portal/app/: layout.tsx  page.tsx
web/portal/components/: AppealEntry.test.tsx  AppealEntry.tsx  ClaimSubmit.test.tsx  ClaimSubmit.tsx  ContradictionsPanel.test.tsx  ContradictionsPanel.tsx  VerdictCard.test.tsx  VerdictCard.tsx
web/portal/lib/: gateway.test.ts  gateway.ts  sample.ts
