[project]
name = "eip-claim-engine"
version = "0.0.1"
description = "Claim Engine for the Evidence Intelligence Platform — normalizes raw input into Claim objects (LLM extracts/classifies; never scores)."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.6", "anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25",
    "jsonschema>=4.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eip_claim"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["src/eip_claim/_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
files = ["src"]
exclude = ["src/eip_claim/_generated/"]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
