[project]
name = "eip-evidence-engine"
version = "0.0.1"
description = "Evidence Retrieval Engine — retrieves and classifies candidate evidence for a claim (LLM classifies relation; never scores)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "eip-llm",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "qdrant-client>=1.7",
]

[tool.uv.sources]
eip-llm = { path = "../libs/eip-llm", editable = true }

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eip_evidence"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["src/eip_evidence/_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
files = ["src"]
exclude = ["src/eip_evidence/_generated/"]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
