[project]
name = "eip-llm"
version = "0.0.1"
description = "Shared recorded LLM wrapper for EIP services (ADR-0005)."
requires-python = ">=3.12"
dependencies = ["anthropic>=0.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eip_llm"]
